--- a/friday/chrome/content/test.html
+++ b/friday/chrome/content/test.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="test.js"></script>
 <link rel="stylesheet" href="test.css" type="text/css">
 </head>
-<body onload="testSuite.start();">
+<body onload="TestSuite.start();">
 <h1>Friday Test Suite</h1>
 <div id="test-output"></div>
 </body> </html>
