Separated tests out into a new file, cleaned up code indentation a bit.

--- a/friday/chrome/content/test.html
+++ b/friday/chrome/content/test.html
@@ -2,6 +2,7 @@
 <html><head>
 <title>Friday Test Suite</title>
 <script type="text/javascript" src="cmdmanager.js"></script>
+<script type="text/javascript" src="tests.js"></script>
 <script type="text/javascript" src="test.js"></script>
 <link rel="stylesheet" href="test.css" type="text/css">
 </head>
