Renamed all major user-facing occurrences of 'friday' to 'ubiquity', except for chrome URLs.

--- a/friday/chrome/content/editor.html
+++ b/friday/chrome/content/editor.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head>
-<title>Friday Command Editor</title>
+<title>Ubiquity Command Editor</title>
 <script type="text/javascript" src="prefcommands.js"></script>
 <link rel="stylesheet" href="test.css" type="text/css">
 </head>
 
 <body onload="document.getElementById('editor').value = PrefCommands.getCode();">
-<h1>Friday Command Editor</h1>
+<h1>Ubiquity Command Editor</h1>
 <p>For examples of built-in commands, look <a href="chrome://friday/content/builtincmds.js">here</a>.</p>
 <p>For information on available utility functions for use in commands, look
 <a href="chrome://friday/content/cmdutils.js">here</a>.</p>
