--- a/friday/chrome/content/test.html
+++ b/friday/chrome/content/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head>
-<title>Friday Test Suite</title>
+<title>Ubiquity Test Suite</title>
 <script type="text/javascript" src="cmdmanager.js"></script>
 <script type="text/javascript" src="tests.js"></script>
 <script type="text/javascript" src="test.js"></script>
@@ -16,6 +16,6 @@ function startTestSuite()
 <link rel="stylesheet" href="test.css" type="text/css">
 </head>
 <body onload="startTestSuite();">
-<h1>Friday Test Suite</h1>
+<h1>Ubiquity Test Suite</h1>
 <div id="test-output"></div>
 </body></html>
