--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head>
 <title>Ubiquity Test Suite</title>
+<script type="text/javascript" src="sandboxfactory.js"></script>
 <script type="text/javascript" src="cmdmanager.js"></script>
 <script type="text/javascript" src="tests.js"></script>
 <script type="text/javascript" src="test.js"></script>
