--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -6,12 +6,11 @@
 <script type="text/javascript" src="tests.js"></script>
 <script type="text/javascript" src="test.js"></script>
 <script type="text/javascript">
-function startTestSuite()
-{
-    var outputElement = document.getElementById("test-output");
-    var suite = new TestSuite(new HtmlTestResponder(outputElement),
-                              window);
-    suite.start();
+function startTestSuite() {
+  var outputElement = document.getElementById("test-output");
+  var suite = new TestSuite(new HtmlTestResponder(outputElement),
+                            window);
+  suite.start();
 }
 </script>
 <link rel="stylesheet" href="test.css" type="text/css">
