--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -11,6 +11,7 @@
 <body>
 <h1>Welcome to Ubiquity!</h1>
 <p>Use the <a href="editor.html">command editor</a>.</p>
+<p>Read <a href="builtincmds.html">command documentation</a>.</p>
 <p>Run the <a href="test.html">unit tests</a>.</p>
 </body>
 <script type="text/javascript" src=""></script>
