The built-in command list is now much more user-friendly re: commands that don't have any documentation.

--- a/ubiquity/chrome/content/builtincmds.html
+++ b/ubiquity/chrome/content/builtincmds.html
@@ -10,6 +10,7 @@
 <body>
 <script src="jquery-1.2.3.min.js"></script>
 <script src="builtincmds.js"></script>
+<h1>Ubiquity Built-in Commands</h1>
 <div class="command" id="cmd_google">
   <img class="icon" src="http://www.google.com/favicon.ico"/>
   <span class="name">google</span>
