--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head>
 <title>Ubiquity Test Suite</title>
-<script type="text/javascript" src="sandboxfactory.js"></script>
-<script type="text/javascript" src="cmdmanager.js"></script>
-<script type="text/javascript" src="tests.js"></script>
-<script type="text/javascript" src="test.js"></script>
-<script type="text/javascript">
+<script type="text/javascript;version=1.7" src="sandboxfactory.js"></script>
+<script type="text/javascript;version=1.7" src="cmdmanager.js"></script>
+<script type="text/javascript;version=1.7" src="tests.js"></script>
+<script type="text/javascript;version=1.7" src="test.js"></script>
+<script type="text/javascript;version=1.7">
 function startTestSuite() {
   var outputElement = document.getElementById("test-output");
   var suite = new TestSuite(new HtmlTestResponder(outputElement),
