Added more to about:ubiquity.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -10,9 +10,24 @@
 </head>
 <body>
 <h1>Welcome to Ubiquity!</h1>
-<p>Use the <a href="editor.html">command editor</a>.</p>
-<p>Read <a href="builtincmds.html">command documentation</a>.</p>
-<p>Run the <a href="test.html">unit tests</a>.</p>
+<p>Here's some things you can do:</p>
+<ul>
+  <li>Use the <a href="editor.html">command editor</a> to play around
+  with creating new Ubiquity commands.  This isn't just a fun way to
+  experiment with Ubiquity&mdash;it's actually a really easy way to
+  experiment with Firefox development in general, because writing and
+  changing commands doesn't require restarting Firefox, or even
+  manually reloading anything.</li>
+
+  <li>Read <a href="builtincmds.html">command documentation</a> for
+  information on the built-in commands that come with Ubiquity.</li>
+
+  <li>Run the <a href="test.html">unit tests</a>.</li>
+
+  <li>Use the <a href="chrome://ubiquity/content/harness.xul">development
+  harness</a> to develop the actual Ubiquity command entry user interface
+  and other aspects of Ubiquity without having to restart Firefox.</li>
+</ul>
 </body>
 <script type="text/javascript" src=""></script>
 </html>
