Added a really basic preview for the search commands.

--- a/ubiquity/chrome/content/preview.html
+++ b/ubiquity/chrome/content/preview.html
@@ -3,9 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <link rel="stylesheet" href="test.css" type="text/css">
   <title></title>
 </head>
 <body>
-Type the name of a command and press enter to execute it.
+  <div id="content">
+    Type the name of a command and press enter to execute it.
+  </div>
 </body>
 </html>
