--- a/ubiquity/chrome/content/preview.html
+++ b/ubiquity/chrome/content/preview.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div id="content">
-    Type the name of a command and press enter to execute it.
+    Type the name of a command and press enter to execute it,
+    or <b>help</b> for assistance.
   </div>
 </body>
 </html>
