Switched to XHTML for command mode display. The code looks horrible right now, I'll clean it up in my next commit. There's also a weird bug whereby the chrome behind the command mode doesn't repaint itself.

--- a/ubiquity/chrome/content/preview.html
+++ b/ubiquity/chrome/content/preview.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="test.css" type="text/css">
   <title></title>
 </head>
-<body>
+<body style="overflow: hidden;">
   <div id="content">
   </div>
 </body>
