Fixed builtincmds.html so that it should display without any errors once newcmds.html is renamed to builtincmds.js.

--- a/ubiquity/chrome/content/builtincmds.html
+++ b/ubiquity/chrome/content/builtincmds.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <script src="jquery-1.2.3.min.js"></script>
+<script src="nlparser/nountypes.js"></script>
 <script src="builtincmds.js"></script>
 <script src="final.js"></script>
 <h1>Ubiquity Built-in Commands</h1>
