Working on fixing the broken unit tests: now importing nltypes.js and its dependencies (commandManager needs them).  Also made a class for FakeCommandSources in tests.js, so that all the fakeSources can more easily be kept in sync with the interface of the real CommandSource.

--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head>
 <title>Ubiquity Test Suite</title>
+<script type="text/javascript;version=1.7" src="date.js"/>
+<script type="text/javascript;version=1.7" src="jquery-1.2.3.min.js"/>
+<script type="text/javascript;version=1.7" src="selutils.js"/>
+<script type="text/javascript;version=1.7" src="nlparser/verbtypes.js"></script>
+<script type="text/javascript;version=1.7" src="nlparser/nlparser.js"></script>
 <script type="text/javascript;version=1.7" src="sandboxfactory.js"></script>
 <script type="text/javascript;version=1.7" src="cmdmanager.js"></script>
 <script type="text/javascript;version=1.7" src="tests.js"></script>
