Added some links to documentation for participation on the editor page and the help page.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -24,6 +24,12 @@
   <li>Read <a href="builtincmds.html">command documentation</a> for
   information on the built-in commands that come with Ubiquity.</li>
 
+  <li>Get involved! Learn how by visiting the
+  <a href="http://wiki.mozilla.org/Labs/Ubiquity">Ubiquity Wiki</a>.
+  Want to share a command to the world? Post it on the
+  <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">Commands in the Wild</a>
+  wiki page.</li>
+
   <li>Run the <a href="test.html">unit tests</a>.</li>
 
   <li>Use the <a href="chrome://ubiquity/content/harness.xul">development
