--- a/ubiquity/chrome/content/mapping/mapping.html
+++ b/ubiquity/chrome/content/mapping/mapping.html
@@ -13,8 +13,16 @@
     function initialize() {
       if (GBrowserIsCompatible()) {
         var map = new GMap2(document.getElementById("map_canvas"));
-        map.setCenter(new GLatLng(37.4419, -122.1419), 13);
+        map.setCenter(new GLatLng(37.4419, -122.1419), 13);        
       }
+    }
+    
+    function aza() {
+      setTimeout( function(){
+        var map = new GMap2(document.getElementById("map_canvas"));
+        map.setCenter(new GLatLng(36.4419, -122.1419), 10);
+      }, 500)
+     
     }
 
     </script>
