Replaced builtincmds.html with cmdlist.html, which displays a list of all available commands.  Currently it doesn't display commands that are fetched remotely, however, so this needs to be done before we can declare #46 to be finished.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -21,8 +21,8 @@
   changing commands doesn't require restarting Firefox, or even
   manually reloading anything.</li>
 
-  <li>Read <a href="builtincmds.html">command documentation</a> for
-  information on the built-in commands that come with Ubiquity.</li>
+  <li>Read <a href="cmdlist.html">command documentation</a> for
+  information on the commands available to you.</li>
 
   <li>Get involved! Learn how by visiting the
   <a href="http://wiki.mozilla.org/Labs/Ubiquity">Ubiquity Wiki</a>.
