--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -5,16 +5,19 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" type="text/css" media="all"
         href="test.css" />
-  <title>Ubiquity Built-in Commands</title>
+  <title>Ubiquity Commands</title>
 </head>
 <body>
 <script src="jquery-1.2.3.min.js"></script>
-<script src="nlparser/nounTypeBase.js"></script>
-<script src="nlparser/nountypes.js"></script>
-<script src="cmdutils.js"></script>
-<script src="builtincmds.js"></script>
-<script src="final.js"></script>
-<h1>Ubiquity Built-in Commands</h1>
+<script src="template.js"></script>
+<script src="codesource.js"></script>
+<script src="prefcommands.js"></script>
+<script src="cmdmanager.js"></script>
+<script src="msgservice.js"></script>
+<script src="sandboxfactory.js"></script>
+<script src="builtinfactories.js"></script>
+<script src="cmdlist.js"></script>
+<h1>Ubiquity Commands</h1>
 <div class="command" id="cmd_google">
   <img class="icon" src="http://www.google.com/favicon.ico"/>
   <span class="name">google</span>
