Fixed a bug that prevented the command list from functioning properly again.

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -12,7 +12,8 @@
 <script src="template.js"></script>
 <script src="codesource.js"></script>
 <script src="prefcommands.js"></script>
-<script src="cmdmanager.js"></script>
+<script type="application/javascript;version=1.7"
+        src="cmdmanager.js"></script>
 <script src="msgservice.js"></script>
 <script src="sandboxfactory.js"></script>
 <script src="builtinfactories.js"></script>
