Moved base NounType class out of nounTypeBase.js into cmdutils.js.  Now called CmdUtils.NounType.  Can be used in 3rd party command code.  This fixes bug 49.

--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head>
 <title>Ubiquity Test Suite</title>
-<script type="text/javascript;version=1.7" src="nlparser/nounTypeBase.js"></script>
+<script type="text/javascript;version=1.7" src="cmdutils.js"></script>
 <script type="text/javascript;version=1.7" src="nlparser/verbtypes.js"></script>
 <script type="text/javascript;version=1.7" src="nlparser/nlparser.js"></script>
 <script type="text/javascript;version=1.7" src="sandboxfactory.js"></script>
