Big refactoring: moved all parser stuff to the NLParser namespace, and reorganized the code into nlparser/en and nlparser/jp for the english and japanese parsing stuff respetively.  Any client code that used the NLParser or Verb or ParsedSentence objects should now refer to them as NLParser.EnParser, NLParser.EnVerb, and NLParser.EnParsedSentence.
--HG--
rename : ubiquity/chrome/content/nlparser/nountypes.js => ubiquity/chrome/content/nlparser/en/nountypes.js
rename : ubiquity/chrome/content/nlparser/nlparser.js => ubiquity/chrome/content/nlparser/en/parser.js
rename : ubiquity/chrome/content/nlparser/verbtypes.js => ubiquity/chrome/content/nlparser/en/verbtypes.js
rename : ubiquity/chrome/content/jp-nlparser/japaneseCmdsUtf8.js => ubiquity/chrome/content/nlparser/jp/builtincmds.js
rename : ubiquity/chrome/content/jp-nlparser/japaneseNounTypes.js => ubiquity/chrome/content/nlparser/jp/nountypes.js
rename : ubiquity/chrome/content/jp-nlparser/japaneseNLParser.js => ubiquity/chrome/content/nlparser/jp/parser.js
rename : ubiquity/chrome/content/jp-nlparser/testJapaneseNLParser.js => ubiquity/chrome/content/nlparser/jp/testJapaneseNLParser.js

--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -2,8 +2,9 @@
 <html><head>
 <title>Ubiquity Test Suite</title>
 <script type="text/javascript;version=1.7" src="cmdutils.js"></script>
-<script type="text/javascript;version=1.7" src="nlparser/verbtypes.js"></script>
-<script type="text/javascript;version=1.7" src="nlparser/nlparser.js"></script>
+<script type="text/javascript;version=1.7" src="nlparser/parsersettings.js"></script>
+<script type="text/javascript;version=1.7" src="nlparser/en/verbtypes.js"></script>
+<script type="text/javascript;version=1.7" src="nlparser/en/parser.js"></script>
 <script type="text/javascript;version=1.7" src="sandboxfactory.js"></script>
 <script type="text/javascript;version=1.7" src="cmdmanager.js"></script>
 <script type="text/javascript;version=1.7" src="tests.js"></script>
