--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -34,7 +34,7 @@ document.write( "<a href=\"" +
 before you make a decision on whether to install it or not.</p>
 
 <p>Otherwise, you should not install the command unless this link was given to
-you by someone gyou know and trust.</p>
+you by someone you know and trust.</p>
 
 <div class="todo" style="border-style:solid; border-width:2px; margin:50px; padding:10px; border-color:#ffff00"><p><i>In the future, we plan to have a widget here
   displaying what we call a &quot;social trust network&quot;.  You'll be able
