Made terminology consistent (you 'subscribe to' a command, you don't 'install' it.) in confirmation page.

--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -12,7 +12,7 @@ gCommandFeedInfo.sourceUrl = "http://www.example.com/ubiquity-commands.js";
 <h1 style="color:#ffff00; text-align:center; font-size:72pt">
 <blink>BEWARE, HUMAN!</blink></h1>
 
-<p>You are about to install a Ubiquity command from an unknown, untrusted
+<p>You are about to subscribe to a Ubiquity command from an unknown, untrusted
 third-party source
 
 <script>
@@ -21,7 +21,7 @@ document.write( "at <a href=\"" + gCommandFeedInfo.url + "\">" +
 </script>
 .</p>
 
-<p>If installed, this command could do <i>anything it wants</i> to your browser.
+<p>If you subscribe, this command could do <i>anything it wants</i> to your browser.
 It could steal your credit card number or e-mail your grandmother all of your
 porn.</p>
 
@@ -31,9 +31,9 @@ document.write( "<a href=\"" +
                  gCommandFeedInfo.sourceUrl +
                  "\">the command's source code</a>");
 </script>
-before you make a decision on whether to install it or not.</p>
+before you make a decision on whether to subscribe to it or not.</p>
 
-<p>Otherwise, you should not install the command unless this link was given to
+<p>Otherwise, you should not subscribe to the command unless this link was given to
 you by someone you know and trust.</p>
 
 <div class="todo" style="border-style:solid; border-width:2px; margin:50px; padding:10px; border-color:#ffff00"><p><i>In the future, we plan to have a widget here
@@ -41,13 +41,13 @@ you by someone you know and trust.</p>
   to see whether any of your friends have tried out this command.  They can
   either vouch for the command's safety or leave a warning about the command's
   dangers.  We hope this will help people make informed decisions about whether
-  to install commands or not.  This feature should be coming in Ubiquity 0.2.
+  to subscribe to commands or not.  This feature should be coming in Ubiquity 0.2.
   </i></p></div>
   
 <form>
 <p><input type="submit" value="Get me outta here!"/>
 &nbsp;&nbsp;&nbsp;&nbsp;
-<input type="submit" value="I know what I'm doing. Install it!"/>
+<input type="submit" value="I know what I'm doing. Subscribe to it!"/>
 </p>
 </form>
 
