Removed the word 'porn' from the warning page :-)

--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -22,8 +22,8 @@ document.write( "at <a href=\"" + gCommandFeedInfo.url + "\">" +
 .</p>
 
 <p>If you subscribe, this command could do <i>anything it wants</i> to your browser.
-It could steal your credit card number or e-mail your grandmother all of your
-porn.</p>
+It could steal your credit card number or e-mail your grandmother your entire image
+browsing history.</p>
 
 <p>If you understand JavaScript, you can read
 <script>
