Improved the warning page by putting source code into an iframe and explaining how to manage/uninstall commands later.

--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -12,38 +12,42 @@ gCommandFeedInfo.sourceUrl = "http://www.example.com/ubiquity-commands.js";
 <h1 style="color:#ffff00; text-align:center; font-size:72pt">
 <blink>BEWARE, HUMAN!</blink></h1>
 
-<p>You are about to subscribe to a Ubiquity command from an unknown, untrusted
-third-party source
+<p>You are about to subscribe to a <a href="">Ubiquity</a>
+command from an unknown, untrusted third-party source
 
 <script>
 document.write( "at <a href=\"" + gCommandFeedInfo.url + "\">" +
                 gCommandFeedInfo.url + "</a>");
 </script>
-.</p>
-
-<p>If you subscribe, this command could do <i>anything it wants</i> to your browser.
+. If you subscribe, this command could do <i>anything it wants</i> to your browser.
 It could steal your credit card number or e-mail your grandmother your entire image
 browsing history.</p>
 
-<p>If you understand JavaScript, you can read
+<p>Here is the JavaScript source code to the command:</p>
+
 <script>
-document.write( "<a href=\"" +
+document.write( "<iframe width=\"80%\" src=\"" +
                  gCommandFeedInfo.sourceUrl +
-                 "\">the command's source code</a>");
+                 "\"></iframe>");
 </script>
-before you make a decision on whether to subscribe to it or not.</p>
 
-<p>Otherwise, you should not subscribe to the command unless this link was given to
-you by someone you know and trust.</p>
+<p>If you understand JavaScript, you should read the source code and try
+to understand what the command will do in order to decide whether it's safe
+to install or not. If you don't understand JavaScript, you should not subscribe to the command
+unless this link was given to you by someone you know and trust.</p>
 
-<div class="todo" style="border-style:solid; border-width:2px; margin:50px; padding:10px; border-color:#ffff00"><p><i>In the future, we plan to have a widget here
+<div class="todo" style="border-style:solid; border-width:2px; width:80%; padding:10px; border-color:#ffff00"><p><i>In the future, we plan to have a widget here
   displaying what we call a &quot;social trust network&quot;.  You'll be able
   to see whether any of your friends have tried out this command.  They can
   either vouch for the command's safety or leave a warning about the command's
   dangers.  We hope this will help people make informed decisions about whether
   to subscribe to commands or not.  This feature should be coming in Ubiquity 0.2.
   </i></p></div>
-  
+
+<p>You can use the Ubiquity &quot;help&quot; command at any time to get to the
+<a href="about:ubiquity">command management page</a>, where you can see what
+commands you are subscribed to, and cancel any that you no longer want.</p>
+
 <form>
 <p><input type="submit" value="Get me outta here!"/>
 &nbsp;&nbsp;&nbsp;&nbsp;
