The Subscribe... button put up by linkrel_codesource.js now takes you to the warning page, which correctly displays the source code of the command, and has the button to add the annotation that makes the subscription happen.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -21,6 +21,9 @@
   changing commands doesn't require restarting Firefox, or even
   manually reloading anything.</li>
 
+  <!-- TODO show bookmarked commands by loading all places with the
+  "ubiquity/confirmed" annotation -->
+
   <li>Read <a href="cmdlist.html">command documentation</a> for
   information on the commands available to you.</li>
 
