--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -43,7 +43,7 @@ function bookmarkCommand(sourceUrl) {
       <div id="errorLongContent">
 
         <div id="errorShortDesc">
-	  <p>You are about to subscribe to a <a href="about:ubiquity">Ubiquity</a>command from an unknown, untrusted third-party source <script>
+	  <p>You are about to subscribe to a <a href="about:ubiquity">Ubiquity</a> command from an unknown, untrusted third-party source <script>
 document.write( "at <a href=\"" + gCommandFeedInfo.url + "\">" +
                 gCommandFeedInfo.url + "</a>");
 </script>. If you subscribe, this command could do <i>anything it wants</i> to your browser. It could steal your credit card number or e-mail your grandmother your entire image browsing history.</p>
@@ -64,9 +64,10 @@ document.write( "<iframe width=\"80%\" src=\"" +
 document.write( "<a href=\"" + gCommandFeedInfo.sourceUrl + "\">" +
                 "the source code</a>");
 </script>
-and try to understand what the command will do in order to decide whether it's safe
-to install or not. If you don't understand JavaScript, you should not subscribe to the command
-unless this link was given to you by someone you know and trust.</p>
+use your best judgement to decide whether the command is something that's
+safe to execute or not. Proceed at your own risk!</p>
+	  <p>If you don't understand JavaScript, you should not subscribe to the command
+unless the link was given to you by someone you know and trust.</p>
 
 <div class="todo" style="border-style:solid; border-width:2px; width:80%; padding:10px; border-color:#ffff00"><p><i>In the future, we plan to have a widget here
   displaying what we call a &quot;social trust network&quot;.  You'll be able
