Fixed the command list page.

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -10,7 +10,11 @@
 <body>
 <script src="jquery-1.2.3.min.js"></script>
 <script src="template.js"></script>
+<script type="application/javascript;version=1.7"
+        src="utils.js"></script>
 <script src="codesource.js"></script>
+<script type="application/javascript;version=1.7"
+        src="linkrel_codesource.js"></script>
 <script src="prefcommands.js"></script>
 <script type="application/javascript;version=1.7"
         src="cmdmanager.js"></script>
